--- a/_02-10_emotion_child.qmd
+++ b/_02-10_emotion_child.qmd
@@ -207,9 +207,9 @@ bwu::cat_neuropsych_results(data = data_emotion_parent, file = "_02-09_emotion_c
 #| label: text-emotion-teacher
 #| cache: true
 #| include: false
-#| eval: true
+#| eval: false
 
-# Parent report
+# Teacher report
 data_emotion_teacher <-
   data_emotion |>
   dplyr::filter(test == "basc3_trs_preschool" | test == "basc3_trs_child" | test == "basc3_trs_adolescent" | test == "basc3_trs_college") |>
@@ -219,7 +219,6 @@ data_emotion_teacher <-
 # Flatten the text
 bwu::cat_neuropsych_results(data = data_emotion_teacher, file = "_02-09_emotion_child_text_teacher.qmd")
 ```
-
 
 ```{r}
 #| label: qtbl-emotion-child
@@ -244,20 +243,12 @@ fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]"
 
 # define the groupings for the table
 grp_emotion <- list(
-  t_score = c("BASC-3 SRP ", "BASC-3 TRS ", "BASC-3 PRS ", "PAI", "MMPI-3")
+  t_score = c("BASC-3 SRP Adolescent", "BASC-3 TRS Adolescent", "BASC-3 PRS Adolescent", "PAI", "MMPI-3")
 )
 
 grp_self <- list(
-  t_score = c("BASC-3 SRP ", "PAI", "MMPI-3")
+  t_score = c("BASC-3 SRP Adolescent", "PAI", "MMPI-3")
 )
-
-# Clean scale names
-data_emotion_self <-
-  dplyr::mutate(data_emotion_self,
-    scale = stringr::str_remove_all(
-      scale, "PAI |BASC-3 |MMPI-3 "
-    )
-  )
 
 # redo this bc got sorted by pct
 data_emotion_self <-
@@ -284,7 +275,7 @@ bwu::tbl_gt(
 #| dev: tikz
 #| fig-process: pdf2png
 #| include: false
-#| eval: false
+#| eval: true
 options(tikzDefaultEngine = "xetex")
 
 # table arguments
@@ -295,33 +286,31 @@ multiline <- TRUE
 # source note
 source_note <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
 
-_Note_: Personal Adjustment scores are reversed.")
+_Note_: Adaptive Skills scores are reversed.")
 
 # footnotes
 fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
 
-# define the groupings for the table
 grp_emotion <- list(
-  t_score = c("BASC-3 SRP ", "BASC-3 TRS ", "BASC-3 PRS ", "PAI", "MMPI-3")
+  t_score = c("BASC-3 SRP Adolescent", "BASC-3 TRS Adolescent", "BASC-3 PRS Adolescent", "PAI", "MMPI-3", "BASC-3 PRS", "BASC-3 PRS")
 )
 
 grp_parent <- list(
-  t_score = c("BASC-3 PRS ")
+  t_score = c("BASC-3 PRS")
 )
-
-# Clean scale names
-data_emotion_parent <-
-  dplyr::mutate(data_emotion_parent,
-    scale = stringr::str_remove_all(
-      scale, "PAI |BASC-3 |MMPI-3 "
-    )
-  )
 
 # redo this bc got sorted by pct
 data_emotion_parent <-
   data_emotion |>
-  dplyr::filter(test == "basc3_prs_child" | test == "basc3_prs_adolescent" | test == "basc3_prs_college") |>
+  dplyr::filter(
+    test == "basc3_prs_preschool" |
+      test == "basc3_prs_child" |
+      test == "basc3_prs_adolescent" | 
+      test == "basc3_prs_college"
+    ) |>
   dplyr::distinct(.keep_all = FALSE)
+
+pheno <- "emotion_parent"
 
 # make `gt` table
 bwu::tbl_gt(
@@ -329,65 +318,13 @@ bwu::tbl_gt(
   pheno = pheno,
   table_name = table_name,
   source_note = source_note,
-  fn_t_score = fn_t_score,
-  grp_t_score = grp_parent[["t_score"]],
+  # fn_t_score = fn_t_score,
+  # grp_t_score = grp_parent[["t_score"]],
   dynamic_grp = grp_parent,
   vertical_padding = vertical_padding,
   multiline = multiline
 )
-
-# Set the default engine for tikz to "xetex"
-options(tikzDefaultEngine = "xetex")
-
-# Define the table name, vertical padding, and multiline setting
-table_name <- "table_emotion_parent"
-vertical_padding <- 0
-multiline <- FALSE
-pheno <- "emotion_parent"
-
-# source note
-source_note <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
-
-_Note_: Adaptive Skills scores are reversed.")
-
-# footnotes
-fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
-
-# define the groupings for the table
-grp_emotion <- list(
-  t_score = c("BASC-3 PRS", "BASC-3 TRS", "BASC-3 SRP", "PAI", "MMPI-3")
-)
-
-# Extract the data for the table
-data_emotion_parent <-
-  dplyr::filter(
-    data_emotion,
-    domain %in% c(
-      "Psychiatric Disorders",
-      "Personality Disorders",
-      "Substance Use",
-      "Psychosocial Problems",
-      "Behavioral/Emotional/Social",
-      "Emotional/Behavioral/Personality"
-    )
-  ) |>
-  dplyr::filter(test_name %in% c("BASC-3 PRS")) |>
-  dplyr::arrange(absort) |>
-  dplyr::arrange(subdomain)
-
-# Create the table using the tbl_gt function from the bwu library
-bwu::tbl_gt(
-  data = data_emotion_parent,
-  pheno = pheno,
-  table_name = table_name,
-  vertical_padding = vertical_padding,
-  source_note = source_note,
-  grp_t_score = grp_emotion[["t_score"]],
-  dynamic_grp = grp_emotion,
-  multiline = multiline
-)
 ```
-
 
 ```{r}
 #| label: qtbl-emotion-teacher
@@ -412,11 +349,11 @@ fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]"
 
 # define the groupings for the table
 grp_emotion <- list(
-  t_score = c("BASC-3 SRP ", "BASC-3 TRS ", "BASC-3 PRS ", "PAI", "MMPI-3")
+  t_score = c("BASC-3 SRP", "BASC-3 TRS", "BASC-3 PRS", "PAI", "MMPI-3")
 )
 
 grp_teacher <- list(
-  t_score = c("BASC-3 TRS ")
+  t_score = c("BASC-3 TRS")
 )
 
 # Clean scale names
@@ -439,8 +376,8 @@ bwu::tbl_gt(
   pheno = pheno,
   table_name = table_name,
   source_note = source_note,
-  fn_t_score = fn_t_score,
-  grp_t_score = grp_teacher[["t_score"]],
+  # fn_t_score = fn_t_score,
+  # grp_t_score = grp_teacher[["t_score"]],
   dynamic_grp = grp_teacher,
   vertical_padding = vertical_padding,
   multiline = multiline
@@ -456,7 +393,7 @@ bwu::tbl_gt(
 # df child
 df_child <-
   dplyr::filter(data) |>
-  dplyr::filter(test_name == "BASC-3 SRP ", "PAI")
+  dplyr::filter(test == "basc3_srp_child" | test == "basc3_srp_adolescent" | test == "basc3_srp_college" | test == "pai_adolescent")
 
 # `bwu` dotplot arguments
 colors <- NULL
@@ -494,12 +431,12 @@ options(warn = 0) # Reset to default behavior
 # df parent
 df_parent <-
   dplyr::filter(data) |>
-  dplyr::filter(test_name == "BASC-3 PRS ")
+  dplyr::filter(test == "basc3_prs_parent" | test == "basc3_prs_adolescent" | test == "basc3_prs_college")
 
 # Dotplot arguments
+filename <- "fig_emotion_parent.svg"
 colors <- NULL
 return_plot <- Sys.getenv("RETURN_PLOT")
-filename <- "fig_emotion_parent.svg"
 
 # variables to plot
 x <- df_parent$z_mean_subdomain
@@ -507,6 +444,8 @@ y <- df_parent$subdomain
 
 # Suppress warnings from being converted to errors
 options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+pheno <- "emotion_parent"
 
 # Make dotplot
 bwu::dotplot(
@@ -565,6 +504,7 @@ options(warn = 0) # Reset to default behavior
 #| label: fig-emotion-child-scale
 #| include: false
 #| fig-cap: "Mood/Self-Report"
+#| eval: false
 
 # arguments
 filename <- "fig_emotion_child_scale.svg"
@@ -593,6 +533,7 @@ options(warn = 0) # Reset to default behavior
 #| label: fig-emotion-parent-scale
 #| include: false
 #| fig-cap: "Mood/Parent Report"
+#| eval: false
 
 # arguments
 filename <- "fig_emotion_parent_scale.svg"
@@ -621,6 +562,7 @@ options(warn = 0) # Reset to default behavior
 #| label: fig-emotion-teacher-scale
 #| include: false
 #| fig-cap: "Mood/Teacher Report"
+#| eval: false
 
 # Better version, uses scales to get all the composites
 x <- df_teacher$z
@@ -645,7 +587,7 @@ bwu::dotplot(
 options(warn = 0) # Reset to default behavior
 ```
 
-###  SELF-REPORT
+### SELF-REPORT
 
 {{< include _02-10_emotion_child_text_self.qmd >}}
 
@@ -680,21 +622,19 @@ options(warn = 0) # Reset to default behavior
   )
 }
 ```
-
 ```{=typst}
 // Define the title of the domain
-#let title = "Behavioral/Emotional/Social"
+//#let title = "Behavioral/Emotional/Social"
 
 // Define the file name of the table
-#let file_qtbl = "table_emotion_child.png"
+//#let file_qtbl = "table_emotion_child.png"
 
 // Define the file name of the figure
-#let file_fig = "fig_emotion_child.svg"
+//#let file_fig = "fig_emotion_child.svg"
 
 // Call the 'domain' function with the specified title, table file name, and figure file name
-#domain(title: [#title], file_qtbl, file_fig)
+//#domain(title: [#title], file_qtbl, file_fig)
 ```
-
 ### PARENT RATINGS
 
 {{< include _02-10_emotion_child_text_parent.qmd >}}
@@ -743,10 +683,24 @@ options(warn = 0) # Reset to default behavior
 // Call the 'domain' function with the specified title, table file name, and figure file name
 #domain(title: [#title], file_qtbl, file_fig)
 ```
+<!-- scale level -->
 
+```{=typst}
+// Define the title of the domain
+#let title = "Behavioral/Emotional/Social"
+
+// Define the file name of the table
+#let file_qtbl = "table_emotion_parent.png"
+
+// Define the file name of the figure
+#let file_fig = "fig_emotion_parent_scale.svg"
+
+// Call the 'domain' function with the specified title, table file name, and figure file name
+#domain(title: [#title], file_qtbl, file_fig)
+```
 ### TEACHER RATINGS
 
-{{< include _02-10_emotion_teacher_text.qmd >}}
+{{< include _02-10_emotion_child_text_teacher.qmd >}}
 
 ```{=typst}
 // Define a function to create a domain with a title, a table, and a figure
@@ -781,14 +735,14 @@ options(warn = 0) # Reset to default behavior
 ```
 ```{=typst}
 // Define the title of the domain
-#let title = "Behavioral/Emotional/Social"
+//#let title = "Behavioral/Emotional/Social"
 
 // Define the file name of the table
-#let file_qtbl = "table_emotion_teacher.png"
+// #let file_qtbl = "table_emotion_teacher.png"
 
 // Define the file name of the figure
-#let file_fig = "fig_emotion_teacher.svg"
+// #let file_fig = "fig_emotion_teacher.svg"
 
 // Call the 'domain' function with the specified title, table file name, and figure file name
-#domain(title: [#title], file_qtbl, file_fig)
+// #domain(title: [#title], file_qtbl, file_fig)
 ```
