--- a/src/rmd/pluck_wisc5 2.Rmd
+++ b/src/rmd/pluck_wisc5 2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Pluck Tables from WISC-5"
 params:
-  patient: Felix
+  patient: Biggie
   test:
     label: "Test"
     value: [wisc5]
